# ShaderPlusPlus

./: CmakeLists.txt  README.md
glew/: CMakeLists.txt
glew/include/GL/: eglew.h  glxew.h.bak
glew/src/: glew.c  glewinfo.c  visualinfo.c
shader++/: CMakeLists.txt
shader++/include/: CodeEditor.h  FindWidget.h  GLSLCompleter.h  GLSLHighlighter.h  HighlightBlockRule.h  HighlightRule.h  Language.h  LineNumberArea.h  MainWindow.h  Openglwidget.h  StyleSyntaxHighlighter.h  SyntaxStyle.h  TexturesList.h
shader++/resources/: shaderPlusPlus_resources.qrc
shader++/resources/code_samples/: shader.glsl  shader_00.glsl  shader_01.glsl  shader_02.glsl  shader_03.glsl  shader_04.glsl
shader++/resources/styles/: drakula.xml
shader++/src/: CodeEditor.cpp  FindWidget.cpp  GLSLCompleter.cpp  GLSLHighlighter.cpp  Language.cpp  LineNumberArea.cpp  MainWindow.cpp  Openglwidget.cpp  StyleSyntaxHighlighter.cpp  SyntaxStyle.cpp  TexturesList.cpp  main.cpp
